--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
-    <script src="~downloader/angular-toastr(2.0.0).tpls.min.js"></script>
+    <script src="downloader/angular-toastr(2.0.0).tpls.min.js"></script>
     <script src="https://cdn.rawgit.com/Stuk/jszip/v3.0.0/dist/jszip.min.js"></script>
-    <script src="~downloader/filesaver.min.js"></script>
+    <script src="downloader/filesaver.min.js"></script>
 
-    <script src="~downloader/app.js"></script>
-    <script src="~downloader/home/home.js"></script>
-    <script src="~downloader/home/down-git.js"></script>
+    <script src="downloader/app.js"></script>
+    <script src="downloader/home/home.js"></script>
+    <script src="downloader/home/down-git.js"></script>
 </body>
 
 </html>
